--- a/html/partials/header.html
+++ b/html/partials/header.html
@@ -1,4 +1,13 @@
 <header class="main-header">
   <h1 id="header-title">CountHub</h1>
-  <span id="current-user" class="current-user"></span>
+  <div class="user-section">
+    <span id="current-user" class="current-user"></span>
+    <button id="logout-btn" class="logout-btn" title="로그아웃">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+        <polyline points="16 17 21 12 16 7"></polyline>
+        <line x1="21" y1="12" x2="9" y2="12"></line>
+      </svg>
+    </button>
+  </div>
 </header>
