--- a/style/login-style.css
+++ b/style/login-style.css
@@ -61,3 +61,18 @@
     text-align: center;
     min-height: 1.4em;
   }
+
+  
+#login-btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #007ACC;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#login-btn:hover {
+  background-color: #005A9E;
+}
