--- a/style/inbound-style.css
+++ b/style/inbound-style.css
@@ -27,11 +27,12 @@
   margin: 0px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 12px;
+  justify-content: flex-start;
+  gap: 0px;
 }
 .excel-label {
-  font-size: 15px;
+  margin: 0px 10px;
+  font-size: 18px;
   color: #333;
   font-weight: 600;
 }
@@ -48,7 +49,7 @@
   cursor: pointer;
   display: inline-block;
   box-sizing: border-box;
-  width: 300px; /* fixed width */
+  width: 250px; /* fixed width */
   height: 28px; /* fixed height */
   white-space: nowrap;
   overflow: hidden;
@@ -58,9 +59,16 @@
 
 .excel-actions {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  margin-top: 20px;
+}
+.action-row {
+  display: flex;
   justify-content: center;
-  gap: 150px;
-  margin-top: 0px;
+  gap: 30px;
+  align-items: center;
 }
 .action-btn {
   padding: 6px 14px;
@@ -71,6 +79,7 @@
   cursor: pointer;
   height: 36px;
   min-width: 160px;
+  width: 250px;
 }
 .inbound-content {
     height: calc(100vh - 80px);
